# realtime-analytics-hub

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/api/: consumers.py  routing.py  urls.py  views.py
backend/config/: asgi.py  settings.py
backend/services/: delta_lake_reader.py
mock-generator/: Dockerfile  generator.py  pyproject.toml
spark-jobs/: Dockerfile  alert_detection.py  pyproject.toml  streaming_sales_agg.py
